# l3x-ide

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: const_vec.rs  input.rs  l3x.rs  main.rs  matrix.rs  polygon.rs  registers.rs  sound.rs  swapbuffer.rs  traveler.rs  wasm_log.rs
src/matrix/: file.rs  future_states.rs  import.rs  ui.rs
src/sound/: chord.rs  mod.rs
src/sound/native/: signal_js.rs  signal_rodio.rs
src/wasync/: mod.rs
src/wasync/native/: pc.rs  wasm.rs
www/: index.html  l3x-utils.js  mq_js_bundle.js  wasm-file.js  wasm-log.js  wasm-sound.js
