[package]
name = "l3x-ide"
version = "0.1.0"
edition = "2021"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
rfd = "0.11"
async-executor = "1.5"
futures-lite = "1.13"

[dependencies]
macroquad = "0.3"
egui-macroquad = "0.15"
egui = "0.21"

log = "0.4"
simple_logger = "4.1"

itertools = "0.10"
tap = "1.0"
thiserror = "1.0"
duplicate = "1.0"
vec-drain-where = "1.0"
if_chain = "1.0"

prime_factorization = "1.0"
num-bigint = "0.4"
num-prime = "0.4"
ndarray-csv = "0.5"
smallvec = "1.10"
bitflags = "2.2"
csv = "1.1"
ndarray = "0.15"