[package]
name = "l3x-ide"
version = "0.2.1"
edition = "2021"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
rfd = "0.11"
async-executor = "1.5"
futures-lite = "1.13"

[dependencies]
macroquad = { version = "0.3", default-features = false }
egui-macroquad = { version = "0.15", default-features = false }
egui = "0.21"

log = "0.4"
simple_logger = "4.1"

itertools = "0.10"
tap = "1.0"
thiserror = "1.0"
duplicate = "1.0"
vec-drain-where = "1.0"
if_chain = "1.0"
strum = "0.24"
strum_macros = "0.24"
const-push = { git = "https://github.com/zbrachinara/const-push", default-features = false}
const-str = "0.5"

# TODO test with web app
rodio = "0.17"
single_value_channel = "1"

num-bigint = "0.4"
num-prime = "0.4"
ndarray-csv = "0.5"
smallvec = "1.10"
arrayvec = "0.7"
bitflags = "2.2"
csv = "1.1"
ndarray = "0.15"